Fix navbar resizing on smaller screen
- Fix logo-img to display: none
- Fix push class to margin: 0

--- a/style.css
+++ b/style.css
@@ -159,14 +159,14 @@
 
 @media only screen and (max-width: 970px) {
     .project-grid {
-        display: grid;
         grid-template-columns: repeat( auto-fill, minmax(250px, 1fr) );
         grid-gap: 40px;
     }
     #nav {
-        display: flex;
-        flex-direction: row;
-        justify-self: center; 
+        justify-content: center; 
+    }
+    .push {
+        margin: auto;
     }
     #logo-text {
         display: none
@@ -181,17 +181,16 @@
         flex-direction: column;
     }
     #nav a {
-        padding: 1rem;
+        padding: 15px;
         font-size: 1rem;
     }
     #logo-img {
-        width: 30px;
+        display: none;
     }
     #bio {
         margin: 0px;
         margin-top: 50px;
     }
-
     #about-me img {
         width: 70%;
         height: auto;
